[workspace]
members = ["crates/sdk", "crates/cli"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1" 
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }